syntax = "proto3";

package com.tang.grpc.demo;

option java_multiple_files = true;
option java_package = "com.tang.grpc.demo.service";
option java_outer_classname = "HelloProto";
option objc_class_prefix = "TG";

import "model.proto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
    rpc SayWhat (HelloRequest) returns (HelloReply) {
    }
}

